:sparkle: feat: card functions - css styles

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -4,6 +4,7 @@ body {
     align-items: center;
     min-height: 100vh;
     background: #fc1e8a;
+    user-select: none;
 }
 
 .container {
@@ -60,4 +61,29 @@ h2 {
     align-items: center;
     justify-content: center;
     background-color: #ffffff;
+    font-size: 3em;
+    transform: rotateY(180deg);
+    transition: 0.25s;
+}
+
+.item::after {
+    content: "";
+    position: absolute;
+    inset: 0;
+    background: #404040;
+    background-image: url("../images/trooper2.webp");    
+    background-repeat: no-repeat;
+    background-size: cover;
+    transition: 0.25s;
+    transform: rotateY(0deg);
+    backface-visibility: hidden;
+}
+
+.item.boxOpen {
+    transform: rotateY(0deg);        
+}
+
+.boxOpen::after,
+.boxMatch::after {
+    transform: rotateY(180deg);
 }
